Major additions to Sender.java, minor additions to Peer.java, PieceManager.java

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,5 @@
 all:
+	javac peerProcess.java Logging.java Manager.java Listener.java Sender.java PieceManager.java Peer.java MessageType.java
 
 clean:
-	rm -rf *.class
+	rm -f *.class
